--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+robut-mcollective (0.1.2) unstable; urgency=low
+
+  * Version bump
+
+ -- vagrant <jens.braeuer@commercetools.de>  Tue, 27 Nov 2012 15:53:55 +0000
+
 robut-mcollective (0.1.1) unstable; urgency=low
 
   * Improvements
