--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+robut-mcollective (0.1.3) unstable; urgency=low
+
+  * Move helpers
+
+ -- vagrant <jens.braeuer@commercetools.de>  Wed, 15 May 2013 15:32:35 +0000
+
 robut-mcollective (0.1.2) unstable; urgency=low
 
   * Version bump
