--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+robut-mcollective (0.1.4) unstable; urgency=low
+
+  * Add simple git pull mcollective agent
+
+ -- Hajo Eichler <hajo.eichler@commercetools.de>  Thu, 23 May 2013 21:36:56 +0200
+
 robut-mcollective (0.1.3) unstable; urgency=low
 
   * Move helpers
