--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+robut-mcollective (0.2.0) unstable; urgency=low
+
+  * Add sphere tools node updaye agent
+
+ -- Hajo Eichler <hajo.eichler@commercetools.de>  Mon, 22 Jul 2013 14:48:07 +0200
+
 robut-mcollective (0.1.4) unstable; urgency=low
 
   * Add simple git pull mcollective agent
